# userdaemons

./: AUTHORS  Makefile.am  README  autogen.sh  configure.ac
conf/: Makefile.am  userdaemons.conf
gentoo/: Makefile.am  userdaemons
m4/: Makefile.am
src/: Makefile.am  userdaemon.c  userdaemons.c
